syntax = "proto3";

package pb;

option go_package = "demo/pb";

message LoginRequest {
  string username = 1;
  string password = 2;
}

message  LoginResponse {
  string accessToken = 1;
}

service Auth {
  rpc Login (LoginRequest) returns (LoginResponse);
}
